--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,17 +17,17 @@
         <p>Admin - store departments and assign people to those departments</p>
         <p>Admin - store events and check people into those events</p>
         <p>Admin - view basic statistics total users, families, people, and track attendance and movement growth over time</p>
-        <p>User - create an account</p><br><br>
+        <p>User - create an account</p>
+        <p>Admin - assign people to serve in events to meet needs</p>
+        <p>Admin - create event needs</p>
+        <p>Admin - Update and delete any users</p>
+        <br><br>
 
       <div class="h3-white pull-left">Still to do</div><br><br><br>
         <br><p>------ General ------</p>
         <p>Admin - View Stats - Needs Refining</p>
         <p>Admin - View Dashboard with upcoming events</p>
         <p>User - Report a bug or development suggestion</p>
-
-        <br><p>------ Serving ------</p>
-        <p>Admin - create event needs</p>
-        <p>Admin - assign people to serve in events to meet needs</p>
 
         <br><p>------ Users ------</p>
         <p>User - Update your account settings, picture and family details</p>
