--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -5,15 +5,10 @@
     <%= f.text_field :name, :placeholder => 'Department Name', :class => 'form-control input-lg' %>
     </div>
     <div class="field">
-    <%= f.text_area :description, :placeholder => 'Description', :class => 'form-control input-lg' %>
+    <%= f.text_area :description, :placeholder => 'Description', :class => 'form-control' %>
     </div>
     <div class="field">
     <%= f.hidden_field :leaderName, :placeholder => 'Leader Name', :class => 'form-control input-lg' %>
-    </div>
-
-<!-- Probably doesn't need -->
-    <div class="field">
-      <%= f.hidden_field :user_id, :value => current_user.id %>
     </div>
 
     <div class="field center">
