--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,7 +2,7 @@
   <div class="flex-block-big"> -->
 
   <div class="blue-bar">
-    <div class="h2-white">Events - Index</div>
+    <div class="h2-white center">Events</div>
   </div>
 
     <div class="col-sm-5">
