--- a/app/views/parts/edit.html.erb
+++ b/app/views/parts/edit.html.erb
@@ -2,7 +2,7 @@
     <div class="col-sm-12">
 
       <div class="form">
-        <div class="h2-white pull-left">Part - Person - Edit</div><br><br><br>
+        <div class="h2-white pull-left">Edit Person Details</div><br><br><br>
         <p class="white">First and Last Name must be filled in.</p>
         <%= link_to 'Back', unit_path(@unit) %><br><br>
         <%= render 'form' %>
