--- a/app/views/departments/serve.html.erb
+++ b/app/views/departments/serve.html.erb
@@ -1,27 +1,26 @@
 <div class="blue-bar">
-  <div class="h2-white">Serve</div>
+  <div class="h2-white center">Serve</div>
 </div>
-
 
 <div class="col-sm-12"><br>
 
-<%#= link_to 'Assign Person', new_position_path, :class => "btn btn-sm btn-warning" %>
+  <%#= link_to 'Assign Person', new_position_path, :class => "btn btn-sm btn-warning" %>
 
-<p>Here are departments where you can serve.<br>
-In each department are specific needs that can be met</p>
+  <p>Here are departments where you can serve.<br>
+    In each department are specific needs that can be met</p>
 
-<br>
-<% if @departments.any? %>
-<% @departments.each do |dep| %>
-<div class="white-box-ser ">
+  <br>
+  <% if @departments.any? %>
+  <% @departments.each do |dep| %>
+  <div class="white-box-ser ">
 
-<span class="h2-black"><%= dep.name %></span>
+    <span class="h2-black"><%= dep.name %></span>
 
     <div class="people-box2">
-    <p><%= dep.description%></p>
+      <p><%= dep.description%></p>
       <% @positions.each do |position| %>
 
-    <!-- Filters this department and shows if the need has a value -->
+      <!-- Filters this department and shows if the need has a value -->
       <% if position.department.id === dep.id && position.need != "" %>
 
       <div class="single-person">
@@ -30,15 +29,15 @@ In each department are specific needs that can be met</p>
         </span>
       </div>
 
-      <% end %><!-- filter end -->
+      <% end %>
+      <!-- filter end -->
 
       <% end %>
 
     </div><!-- people-box2 end -->
-</div><!-- col-sm-1 end -->
-
-<% end %>
+  </div><!-- col-sm-1 end -->
+  <% end %>
 <% else %>
-<h3 class="h2-white pull-left">No Departments Yet</h3>
-<% end %>
+  <h3 class="h2-white pull-left">No Departments Yet</h3>
+  <% end %>
 </div>
