--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="flex-container-big">
   <div class="flex-block-big">
 
-      <div class="h2-white pull-left">Parts - People</div><br>
+      <div class="h2-white pull-left">People</div><br>
       <%= link_to "New Person", new_part_path, :class => "btn-sm btn-warning pull-right" %>
 
       <br>
