--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -3,7 +3,7 @@
     <div class="row"> -->
 
     <div class="blue-bar">
-      <div class="h2-white">Statistics</div>
+      <div class="h2-white center">Statistics</div>
     </div>
 
       <div class="col-sm-12">
