--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,9 +1,11 @@
 <div class="space center">
-  <h2 class="pull-left">Forgot your Password?</h2><br><br><br>
-    <div class="well">
+  <h3 class="center">Forgot your password?</h3>
+
 
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <%= devise_error_messages! %>
+
+  <div class="well">
 
     <div class="field">
       <%= f.label :email %><br />
@@ -13,7 +15,7 @@
     <div class="actions">
       <%= f.submit "Send me reset password instructions", :class => "btn btn-primary" %>
     </div>
-  <% end %>
+  <% end %><br><br>
 
 <%= render "devise/shared/links" %>
 </div>
