--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,13 +1,11 @@
-<div class="row">
-  <div class="col-sm-12">
 
-    <div class="form">
-      <h3 class="pull-left">Edit
-        <%= resource_name.to_s.humanize %></h3><br><br><br>
+
+<div class="space center">
+  <h3 class="center pull-down">Edit <%= resource_name.to_s.humanize %></h3>
 
       <%= link_to "Back", :back  %><br>
 
-      <%= devise_error_messages! %> <br>
+      <%= devise_error_messages! %><br>
 
       <div class="well">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -64,5 +62,3 @@
         </div>
       </div>
     </div>
-  </div>
-</div>
