--- a/app/views/positions/_form.html.erb
+++ b/app/views/positions/_form.html.erb
@@ -39,8 +39,8 @@ Department.order('name asc').all.collect { |u| [u.name, u.id] },
 </div>
 
 <div class="field">
-    <label class="na">Church Need</label>
-  <%= f.text_field :need, :placeholder => 'ie. Car Parker', :class => 'form-control input-lg' %>
+    <label class="na">Need</label>
+  <%= f.text_field :need, :placeholder => 'ie. Door Greeter', :class => 'form-control input-lg' %>
 </div>
 
 <div class="actions center">
