--- a/app/views/revents/show.html.erb
+++ b/app/views/revents/show.html.erb
@@ -23,17 +23,17 @@
         <% else %>
           <p>Yes</p>
         <% end %>
-
         <br>
-        <%= link_to "Delete Event", revent_path(@revent), :class => "btn btn-sm btn-danger pull-right",:data => {:confirm => "Are you sure?",:method => "delete"} %>
 
-        <!-- Javascript form toggle -->
-        <div class="edit_family btn btn-sm btn-warning">Edit Event</div>
-        <div class="edit_f">
-          <%= render "form" %>
-        </div>
-        <%#= link_to 'Full Edit', edit_revent_path(@revent) %>
-
+      <% if can? :manage, :all %>
+          <!-- Javascript form toggle -->
+          <div class="edit_family btn btn-sm btn-warning">Edit Event</div>
+          <div class="edit_f"><br>
+            <%= render "form" %>
+          </div>
+          <%#= link_to 'Full Edit', edit_revent_path(@revent) %>
+          <%= link_to "Delete Event", revent_path(@revent), :class => "btn btn-sm btn-danger",:data => {:confirm => "Are you sure?",:method => "delete"} %>
+        <% end %>
       </div><!-- col end -->
       <div class="col-sm-4">
 
@@ -46,14 +46,17 @@
             <span class="grey-btn white" id="spec_<%= spectator.id %>">
               <%= spectator.part.firstname %>
               <%= spectator.part.lastname %>
-            <span class="X">
-              <%= link_to "X", spectator, :class => "black", :id => "delete-test", :data => {:confirm => "Are you sure?",:method => "delete"}, remote: true%>
-            </span></span>
+              <% if can? :manage, :all %>
+                <span class="X">
+                  <%= link_to "X", spectator, :class => "black", :id => "delete-test", :data => {:confirm => "Are you sure?",:method => "delete"}, remote: true%>
+                </span>
+              <% end %>
+            </span>
           <% end %>
           <% end %>
           <!-- Filter end -->
           <br>
-          <%= link_to 'Add Person', new_spectator_path(:revent_id => @revent), :class => "btn-sm btn-primary" %>
+          <%= link_to 'Check-In', new_spectator_path(:revent_id => @revent), :class => "btn-sm btn-primary" %>
         </div>
 
     </div><!-- col end -->
