--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Movement</title>
+    <title>Momentum</title>
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=Bangers|Oswald|Passion+One|Open+Sans" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
