--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,6 +17,7 @@
       <div class="h3-white pull-left">News</div><br><br>
 
       <div class="notice-box">
+        <h5>Placeholder</h5>
       </div><br>
 
   </div>
@@ -66,12 +67,12 @@
         <p>Admin - assign people to serve in events to meet needs</p>
         <p>Admin - create event needs</p>
         <p>Admin - Update and delete any users</p>
+        <p>Admin - View Dashboard with upcoming events</p>
         <br><br>
 
       <div class="h3-white pull-left">Still to do</div><br><br><br>
         <br><p>------ General ------</p>
         <p>Admin - View Stats - Needs Refining</p>
-        <p>Admin - View Dashboard with upcoming events</p>
         <p>User - Report a bug or development suggestion</p>
 
         <br><p>------ Users ------</p>
