--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1166,7 +1166,9 @@ li.selected {
 .close-menu {
   font-size: 1.5em;
   height: 70px;
-
+}
+.push-down {
+  padding-top: 10px;
 }
 .sidenav .closebtn  {
     position: absolute;
