--- a/app/views/revents/index.html.erb
+++ b/app/views/revents/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="col-sm-3">
   <br><br>
-  <%= link_to "New Revent", new_revent_path, :class => "btn btn-sm btn-primary" %>
+  <%= link_to "New Event", new_revent_path, :class => "btn btn-sm btn-primary btn-custom" %>
   <br><br><br>
 
   <% if @revents.any? %>
