allow user edit

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,11 +33,11 @@
           <%= f.password_field :password_confirmation, autocomplete: "off", :class => 'form-control input-lg' %>
         </div><br>
 
-        <div class="field">
+        <!-- <div class="field">
           <label>Old Password</label>
           <i class="font-light">(we need your current password to confirm your changes)</i><br/>
-          <%= f.password_field :current_password, autocomplete: "off", :class => 'form-control input-lg' %>
-        </div>
+          <%#= f.password_field :current_password, autocomplete: "off", :class => 'form-control input-lg' %>
+        </div> -->
 
         <div class="field center">
           <label>User Role</label>
